bk_ida/gccida/c1/optimize_inline_calls
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/optimize_inline_calls/src/tree-inline.c:1481:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v7; // rsi 
^
union 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/optimize_inline_calls/src/tree-inline.c:1483:1: error: unknown type name 'inline_data_0'; did you mean 'inline_data'?
inline_data_0 va; // [rsp+0h] [rbp-68h] BYREF 
^~~~~~~~~~~~~
inline_data
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/optimize_inline_calls/src/tree-inline.c:101:3: note: 'inline_data' declared here
} inline_data;
  ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/optimize_inline_calls/src/tree-inline.c:1509:1: error: use of undeclared identifier 'lang_hooks_0'; did you mean 'lang_hooks'?
lang_hooks_0.tree_inlining.add_pending_fn_decls( &va, v7); 
^~~~~~~~~~~~
lang_hooks
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/optimize_inline_calls/src/langhooks.h:168:32: note: 'lang_hooks' declared here
extern const struct lang_hooks lang_hooks;
                               ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/optimize_inline_calls/src/tree-inline.c:1528:18: error: expected identifier or '('
 struct tree_vec = make_tree_vec( va.inlined_fns->elements_used); 
                 ^
4 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/optimize_inline_calls/src/obj/tree-inline.o] Error 1
